frontend theme improvments

--- a/campaign/templates/app/account/feedback.html
+++ b/campaign/templates/app/account/feedback.html
@@ -58,14 +58,14 @@
             
             <!-- Action Buttons -->
             <div class="space-y-3">
-                <button class="btn btn-primary w-full" onclick="showComingSoon()">
+                <a href="https://forms.gle/tKS8Vcowi8qmyGbM9" class="btn btn-primary w-full">
                     <i class="fa-solid fa-paper-plane mr-2"></i>
                     Submit Feedback
-                </button>
-                <button class="btn btn-outline w-full" onclick="showComingSoon()">
+                </a>
+                <a  href="https://forms.gle/zhG8qw34tZPNbCVd6" class="btn btn-outline w-full">
                     <i class="fa-solid fa-lightbulb mr-2"></i>
                     Request Feature
-                </button>
+                </a>
             </div>
         </div>
     </div>
