--- a/campaign/templates/app/campaign/options.html
+++ b/campaign/templates/app/campaign/options.html
@@ -224,7 +224,7 @@
                         <i class="fas fa-chart-line mr-2"></i> View Dashboard
                     </button>
                 {% else %}
-                    <button class="btn btn-outline btn-primary" onclick="saveOptions()">
+                    <button class="btn btn-outline" onclick="saveOptions()">
                         <i class="fas fa-save mr-2"></i> Save Options
                     </button>
                     <button class="btn btn-primary btn-lg" onclick="launchCampaign()" id="launch-btn">
