--- a/campaign/templates/app/leads/add-leads.html
+++ b/campaign/templates/app/leads/add-leads.html
@@ -251,7 +251,7 @@
                         </svg>
                         </button>
                         
-                        <button class="btn btn-success btn-md ml-auto gap-2 text-gray-100 hidden" id="submitIndividualBtn" onclick="event.preventDefault(); submitIndividualForm({{request.user.subscribed_company.id}}, {{lead_list_id}})">
+                        <button class="btn btn-primary btn-md ml-auto gap-2 text-gray-100 hidden" id="submitIndividualBtn" onclick="event.preventDefault(); submitIndividualForm({{request.user.subscribed_company.id}}, {{lead_list_id}})">
                         <i class="fas fa-check"></i>
                           Submit Lead
                         </button>
@@ -276,7 +276,7 @@
                           <div class="flex gap-2">
                               <!-- Download Template Button -->
                             <div class="text-center">
-                                <button id="downloadTemplate" class="btn bg-primary/90 text-gray-100 border border-base-200 rounded-lg px-4 text-l hover:bg-success transition-all duration-300"> 
+                                <button id="downloadTemplate" class="btn btn-outline"> 
                                     Download Sample File to fill in
                                 </button>
                             </div>
