--- a/campaign/templates/app/overall-dashboard.html
+++ b/campaign/templates/app/overall-dashboard.html
@@ -32,7 +32,7 @@
                 </ul>
             </div>
             <div class="dropdown dropdown-end">
-                <div tabindex="0" role="button" class="btn" id="time-filter-btn">
+                <div tabindex="0" role="button" class="btn text-gray-900" id="time-filter-btn">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 4a1 1 0 011-1h16a1 1 0 011 1v2.586a1 1 0 01-.293.707l-6.414 6.414a1 1 0 00-.293.707V17l-4 4v-6.586a1 1 0 00-.293-.707L3.293 7.293A1 1 0 013 6.586V4z" />
                     </svg>
@@ -281,8 +281,8 @@
                         <td>
                             <div class="flex items-center gap-3">
                                 <div class="avatar">
-                                    <div class="w-10 rounded bg-primary/10 text-primary flex items-center justify-center">
-                                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <div class="w-10 h-10 rounded bg-primary/10 text-primary flex items-center justify-center p-2">
+                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
                                         </svg>
                                     </div>
