--- a/campaign/templates/base.html
+++ b/campaign/templates/base.html
@@ -11,6 +11,7 @@
     <!-- DaisyUI and Tailwind CSS -->
     <link href="{% static 'cdn/daisyui-4-12-2-full.css' %}" rel="stylesheet" type="text/css" />
     <script src="{% static 'cdn/tailwindcss-3-4-16.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'root-extracted.css' %}">
 
     <script src="{% static 'cdn/htmx-2-0-5.min.js' %}" integrity="sha384-t4DxZSyQK+0Uv4jzy5B0QyHyWQD2GFURUmxKMBVww9+e2EJ0ei/vCvv7+79z0fkr" crossorigin="anonymous"></script>
     
@@ -20,6 +21,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link rel="stylesheet" href="{% static 'font.css' %}">
   </head>
   <body class="h-screen overflow-hidden bg-base-200">
         {% block base-content %}
